solution layout vertical align fix

--- a/wp-content/themes/sixgill/less/all_solutions.less
+++ b/wp-content/themes/sixgill/less/all_solutions.less
@@ -58,7 +58,6 @@
 	flex-direction: column;
 	justify-content: center;
 	height: 100vh;
-	min-height: 769px;
 }
 
 
@@ -70,12 +69,6 @@
 .solution-fourth-section {
 	background-image: url('/wp-content/themes/sixgill/images/solutions/bgPattern@1x.png');
 	background-size: inherit;
-}
-
-.solution-second-section-block-title,
-.solution-second-section-icons-title {
-	margin:0 0 0.35em 0;
-	padding: 0;
 }
 
 .solution-second-section-block-title {
