--- a/wp-content/themes/sixgill/less/desktop_solutions.less
+++ b/wp-content/themes/sixgill/less/desktop_solutions.less
@@ -97,8 +97,17 @@
 	padding: 1vw 4vw;
 }
 
+.solution-second-section-block-title,
+.solution-second-section-icons-title {
+	margin:0 0 0.35em 0;
+	padding: 0;
+}
 
-
+.solution-second-section,
+.solution-third-section,
+.solution-fourth-section {
+	min-height: 769px;
+}
 
 /*-----------------------*/
 
