--- a/wp-content/themes/sixgill/less/mobile_portrait_landscape_solutions.less
+++ b/wp-content/themes/sixgill/less/mobile_portrait_landscape_solutions.less
@@ -1,6 +1,13 @@
 /* Solutions mobile portrait and landscape styles */
 
 /*---------First-section--------------------*/
+.solution-second-section,
+.solution-third-section,
+.solution-fourth-section {
+	display: block;
+	height: inherit;
+}
+
 .solution-learn-more-link {
 	display: none;
 }
